infra/k3s/apps/kustomize/base/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-frontend
spec:
  selector:
    matchLabels:
      app: weather
      tier: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: weather
        tier: frontend
    spec:
      containers:
        - name: weather-frontend
          image: gitea.jrzylab.xyz/ramon/weather-app/weather-frontend
          ports:
            - containerPort: 3000
              name: frontend-port
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
