infra/k3s/apps/kustomize/base/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-frontend
spec:
  selector:
    app: weather
    tier: frontend
  ports:
    - name: entry
      protocol: TCP
      port: 80
      targetPort: frontend-port
