infra/k3s/apps/kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather
  labels:
    app: weather
spec:
  rules:
    - host: weather.jrzylab.xyz
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: weather-backend
                port:
                  number: 8000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: weather-frontend
                port:
                  number: 80
